syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";
package org.interledger.stream.proto;

message GetAccountRequest {
    string account_id = 1;

    string jwt = 2;
}


